# CS100_R-Shell

./: .gitignore  .rshellrc  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  input.txt  names.txt  new  newInput.txt  sandbox  test.cpp  text.txt
header/: .rshellclasses.h.swo  checkBuiltin.h  constructExpressionTree.h  convertVectorToCharArray.h  executeCharArray.h  executeSubcommand.h  executeVector.h  filterComments.h  groupQuotes.h  initConfig.h  rshellclasses.h  rshelldefinition.h  rshelldefintion.cpp  rshellutils.h  shuntingExecute.h  shuntingYardConstruct.h  splitOnChar.h  splitSpaces.h  tokenize.h
integration_tests/: assignment2.sh  input_redirection_tests.sh  output_redirection_tests.sh  parserTest.h  pipe_operator_tests.sh  precedence_tests.sh  rshellTest.sh  test_literal_tests.sh  test_symbolic_tests.sh
prototype/: memcheck.cpp  memcheckbad.cpp  prototype_basevector.cpp  prototype_execvp.cpp  prototype_waitpid.cpp  segfault.py
src/: executor.h  hashParser.cpp  hashParser.h  main.cpp  parser.cpp  parser.h  prototype_waitpid.cpp  rshell.cpp  sandbox.cpp  singleTokenizer.h  tokenClasses.cpp  vectorize.cpp  vectorize.h
unit_tests/: checkBuiltinTest.h  constructExpressionTreeTest.h  executeSubcommandTest.h  executeVectorTest.h  filterComments.h  filterCommentsTest.h  groupQuotesTest.h  hashTests  redirectionTest.h  segfault  shuntingTest.h  splitOnCharTest.h  splitSpacesTest.h  test.cpp  tokenizeTest.h  vectorizeTest
